[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/player1.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/suspension_field.png" type="Texture" id=3]
[ext_resource path="res://assets/suspension_bar_0.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 31 )

[sub_resource type="CircleShape2D" id=5]
radius = 13.0004

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="PlayerTexture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SuspensionField" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="SuspensionBar" type="Sprite" parent="."]
position = Vector2( 0, 39 )
texture = ExtResource( 4 )

[node name="shape1" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="area1" type="Area2D" parent="."]

[node name="shape1" type="CollisionShape2D" parent="area1"]
modulate = Color( 0.101961, 1, 0, 1 )
shape = SubResource( 4 )

[node name="SuperTimer" type="Timer" parent="."]

[node name="area2" type="Area2D" parent="."]

[node name="shape1" type="CollisionShape2D" parent="area2"]
modulate = Color( 0.196078, 0, 1, 1 )
scale = Vector2( 10, 10 )
shape = SubResource( 5 )
__meta__ = {
"_editor_description_": "Star detector"
}

[connection signal="area_entered" from="area1" to="." method="_on_area1_area_entered"]
[connection signal="timeout" from="SuperTimer" to="." method="_on_SuperTimer_timeout"]
